--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,6 @@ djangorestframework==3.6.1
 itsdangerous==0.24
 pymongo==3.4.0
 simplejson==3.10.0
+whitenoise==3.3.0
 wsgiref==0.1.2
+psycopg2==2.6.2
