--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ MarkupSafe==0.23
 Werkzeug==0.11.15
 argparse==1.2.1
 click==6.7
+dj-database-url==0.4.2
 djangorestframework==3.6.1
 itsdangerous==0.24
 pymongo==3.4.0
 simplejson==3.10.0
 whitenoise==3.3.0
 wsgiref==0.1.2
-psycopg2==2.6.2
