--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ argparse==1.2.1
 click==6.7
 dj-database-url==0.4.2
 djangorestframework==3.6.1
+gunicorn==19.7.0
 itsdangerous==0.24
 pymongo==3.4.0
 simplejson==3.10.0
