--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ dj-database-url==0.4.2
 djangorestframework==3.6.1
 gunicorn==19.7.0
 itsdangerous==0.24
+psycopg2==2.7.1
 pymongo==3.4.0
 simplejson==3.10.0
 whitenoise==3.3.0
